allowing rna-seq

--- a/config.ini
+++ b/config.ini
@@ -27,7 +27,7 @@ Organisms=Saccharomyces_cerevisiae
 #
 #------------------------------------------------------------------------------------------
 #Unwanted termes in the query with the field IN CSV FORMAT. example: rnaseq[ALL FIELDS],AMPLICON[ALL FIELDS]
-Filter_out=rna-seq[ALL FIELDS],rnaseq[ALL FIELDS],AMPLICON[ALL FIELDS],WGS[ALL FIELDS],ncRNA-seq[ALL FIELDS],miRNA-Seq[ALL FIELDS],miRNASeq[ALL FIELDS],RAD-Seq[ALL FIELDS],RADSeq[ALL FIELDS],RIP-Seq[ALL FIELDS],RIPSeq[ALL FIELDS],WGA[ALL FIELDS],TN-SEQ[ALL FIELDS],WXS[ALL FIELDS],TNSEQ[ALL FIELDS]
+Filter_out=AMPLICON[ALL FIELDS],WGS[ALL FIELDS],ncRNA-seq[ALL FIELDS],miRNA-Seq[ALL FIELDS],miRNASeq[ALL FIELDS],RAD-Seq[ALL FIELDS],RADSeq[ALL FIELDS],RIP-Seq[ALL FIELDS],RIPSeq[ALL FIELDS],WGA[ALL FIELDS],TN-SEQ[ALL FIELDS],WXS[ALL FIELDS],TNSEQ[ALL FIELDS]
 #
 #
 #------------------------------------------------------------------------------------------
