Removed unused code (commented out code)

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ Entrez_email=jean-francois.nadeau7@usherbrooke.ca
 #
 #------------------------------------------------------------------------------------------
 #Output directory for the xml files
-xml_out=xml_directory
+xml_out=elegans
 #
 #
 #------------------------------------------------------------------------------------------
