--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ Entrez_email=jean-francois.nadeau7@usherbrooke.ca
 #
 #------------------------------------------------------------------------------------------
 #Output directory for the xml files
-xml_out=new_saccer
+xml_out=gds_test/
 #
 #
 #------------------------------------------------------------------------------------------
@@ -18,7 +18,7 @@ Date_range=2008:2018
 #------------------------------------------------------------------------------------------
 #Wanted terms in the query with the field IN CSV FORMAT. example: chip-seq[ALL FIELDS]
 Search_terms=GSM[ALL FIELDS],(high_throughput_sequencing[PTYP] OR other[PTYP])
-#
+#SRA[STYP] AND gsm[ETYP]
 #
 #------------------------------------------------------------------------------------------
 #Unwanted termes in the query with the field IN CSV FORMAT. example: rnaseq[ALL FIELDS],AMPLICON[ALL FIELDS]
