Major re-organisation of the tool

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
 dev/*
 __pycache__/*
-xml/*
-xml_directory/*
 *.ignore
-targets.txt
-all_xml/*
-make_re.py
-elegans/*
-arabidopsis/
-chicken/
-chimp/
-download_all.sh
-file.txt
-fly/
-mouse/
-pombe/
-rat/
-saccer/
-zebrafish/
+GSM_extractor_out.tsv
+xml_directories/*
