--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,11 @@ Entrez_email=jean-francois.nadeau7@usherbrooke.ca
 #
 #
 #------------------------------------------------------------------------------------------
+#Organism (used in online mode to download the metadata). Coma separated, replace spaces by underscores. example:homo_sapiens,mus_musculus,saccharomyces_cerevisiae
+#Organisms=saccharomyces_cerevisiae
+#
+#
+#------------------------------------------------------------------------------------------
 #Output directory for the xml files
 xml_out=human
 #
@@ -28,3 +33,11 @@ Search_terms=genome_binding/occupancy_profiling_by_high_throughput_sequencing[Da
 #------------------------------------------------------------------------------------------
 #Custom query info to append to the query. Must be a valid entrez query.
 #Custom=AND GSM721188[ALL FIELD]
+#
+#
+#------------------------------------------------------------------------------------------
+#Create a tsv file with the data extracted from the tsv files (True or False) Commented out = False.
+Create_tsv=True
+#
+#
+#------------------------------------------------------------------------------------------
