--- a/config.ini
+++ b/config.ini
@@ -7,22 +7,22 @@ Entrez_email=jean-francois.nadeau7@usherbrooke.ca
 #
 #------------------------------------------------------------------------------------------
 #Organism (used in online mode to download the metadata). Coma separated, replace spaces by underscores. example:homo_sapiens,mus_musculus,saccharomyces_cerevisiae
-#Organisms=saccharomyces_cerevisiae
+Organisms=homo_sapiens,mus_musculus,drosophila_melanogaster,saccharomyces_cerevisiae,arabidopsis_thaliana,caenorhabditis_elegans,schizosaccharomyces_pombe,rattus_norvegicus,danio_rerio,gallus_gallus,pan_troglodytes
 #
 #
 #------------------------------------------------------------------------------------------
 #Output directory for the xml files
-xml_out=human
+xml_out=standalone
 #
 #
 #------------------------------------------------------------------------------------------
 #Enter the date range for the query. You must specify at least the year, but you can also specify the month and	the day: YYYY:YYYY or YYYY/MM:YYYY/MM
-Date_range=2008:2018
+Date_range=2008:2019
 #
 #
 #------------------------------------------------------------------------------------------
 #Wanted terms in the query with the field IN CSV FORMAT. example: chip-seq[ALL FIELDS]
-Search_terms=genome_binding/occupancy_profiling_by_high_throughput_sequencing[DataSet Type]
+Search_terms=(genome_binding/occupancy_profiling_by_high_throughput_sequencing[DataSet Type] OR expression_profiling_by_high_throughput_sequencing[Dataset type] OR Other[Dataset type])
 #
 #
 #------------------------------------------------------------------------------------------
