Re-structuration and fixing flag problem: (-|::) removed)

--- a/config.ini
+++ b/config.ini
@@ -7,12 +7,12 @@ Entrez_email=jean-francois.nadeau7@usherbrooke.ca
 #
 #------------------------------------------------------------------------------------------
 #Organism (used in online mode to download the metadata). Coma separated, replace spaces by underscores. example:homo_sapiens,mus_musculus,saccharomyces_cerevisiae
-Organisms=homo_sapiens,mus_musculus,drosophila_melanogaster,saccharomyces_cerevisiae,arabidopsis_thaliana,caenorhabditis_elegans,schizosaccharomyces_pombe,rattus_norvegicus,danio_rerio,gallus_gallus,pan_troglodytes
+Organisms=saccharomyces_cerevisiae
 #
 #
 #------------------------------------------------------------------------------------------
 #Output directory for the xml files
-xml_out=standalone
+xml_out=saccer_october
 #
 #
 #------------------------------------------------------------------------------------------
@@ -22,12 +22,11 @@ Date_range=2008:2019
 #
 #------------------------------------------------------------------------------------------
 #Wanted terms in the query with the field IN CSV FORMAT. example: chip-seq[ALL FIELDS]
-Search_terms=(genome_binding/occupancy_profiling_by_high_throughput_sequencing[DataSet Type] OR expression_profiling_by_high_throughput_sequencing[Dataset type] OR Other[Dataset type])
-#
+Search_terms=(genome_binding/occupancy_profiling_by_high_throughput_sequencing[DataSet Type] OR Methylation_profiling_by_high_throughput_sequencing[Dataset type] OR expression_profiling_by_high throughput_sequencing[DataSet Type] or other[DataSet Type])
 #
 #------------------------------------------------------------------------------------------
 #Unwanted termes in the query with the field IN CSV FORMAT. example: rnaseq[ALL FIELDS],AMPLICON[ALL FIELDS]
-#Filter_out=rna[Sample Type],rna-seq[ALL FIELDS]
+#Filter_out=
 #
 #
 #------------------------------------------------------------------------------------------
